--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -9,7 +9,7 @@
 
   <div class="column">
 
-    <div style="position: relative; top: 75px; z-index: 1" class="ui fluid centered small circular image">
+    <div style="position: relative; top: 75px; z-index: 1; box-shadow: 0 1px 3px 0 #D4D4D5,0 0 0 1px #D4D4D5;" class="ui fluid centered small circular image">
       <img src="{{ site.data.bio.basics.picture }}">
     </div>
 
