--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -9,7 +9,8 @@
 
   <div class="column">
 
-    <div style="position: relative; top: 75px; z-index: 1; box-shadow: 0 1px 3px 0 #D4D4D5,0 0 0 1px #D4D4D5;" class="ui fluid centered small circular image">
+    <div style="position: relative; top: 75px; z-index: 1; box-shadow: 0 1px 3px 0 #D4D4D5,0 0 0 1px #D4D4D5;"
+      class="ui fluid centered small circular image">
       <img src="{{ site.data.bio.basics.picture }}">
     </div>
 
@@ -29,9 +30,14 @@
         <div class="description">
           Interests:
           {% for interest in site.data.bio.interests %}
-            {{ interest.name }}{% if forloop.last != true %}, {% endif %}
+          {{ interest.name }}{% if forloop.last != true %}, {% endif %}
           {% endfor %}
-
+        </div>
+        <div class="description">
+          Skills:
+          {% for skill in site.data.bio.skills[0].keywords %}
+          {{ skill }}{% if forloop.last != true %}, {% endif %}
+          {% endfor %}
         </div>
       </div>
       <div class="center aligned extra content">
