--- a/_includes/project-card-1a.html
+++ b/_includes/project-card-1a.html
@@ -9,10 +9,10 @@
   {% endif %}
   <div class="content">
     <span class="header">{{ include.page.title }}</span>
-    <div class="meta">
+<!--     <div class="meta">
       <span class="date">{{ include.page.date }}</span>
     </div>
-
+ -->
     <div class="description">
       {{ include.page.summary }}
     </div>
