Add responsive to particles

--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -89,7 +89,14 @@
         ({
           selector:
             '.background',
-          connectParticles: true
+          connectParticles: true,
+          responsive: [{
+            breakpoint: 800,
+            options: {
+              maxParticles: 80,
+              connectParticles: false
+            }
+          }]
         });
     };
 </script>
